--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,22 @@
 @tailwind utilities;
 
 body{
-  background-color: rgb(240, 253, 244);
+    background-color: rgb(240, 253, 244);
 }
+
 .swiper-button-next:after,
 .swiper-button-prev:after{
-    color: #a8dadc;
+    color: #527c7d;
 }
 
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{
-    background: #a8dadc !important
+    background: #527c7d !important
+}
+
+html::-webkit-scrollbar{
+    display: none;
+}
+
+html{
+    scrollbar-width: none;
 }
